# LD50Rust

./: Cargo.toml  LICENSE  README.md
assets/blender/: soul.blend  tree.blend
assets/models/: building.gltf  hunter.gltf  player.gltf  portal.glb  portal.gltf  red_soul.gltf  soul.glb  soul.gltf  tree.gltf
src/: components.rs  constants.rs  debug.rs  entities.rs  main.rs  spawners.rs  start_scene.rs  systems.rs  tools.rs
