[package]
name = "ld_50"
version = "0.1.0"
edition = "2021"

[profile.dev]
opt-level = 1

[profile.dev.package."*"]
opt-level = 3

[dependencies]
bevy = { version = "0.6", features = [
    "bevy_gilrs",
    "bevy_winit",
    "render",
    "png",
    "hdr",
    "vorbis",
    "x11",
    "filesystem_watcher",
    
    # Development/Debug features:
    "dynamic",      # Dynamic linking for faster compile-times
]}

bevy_kira_audio = { version = "0.8", features = ["ogg", "wav"] }
bevy-inspector-egui = "0.8"
rand = "0.8.5"